--- a/git/index.html
+++ b/git/index.html
@@ -6,3 +6,77 @@
 <footer>(C) 2025 All Rights Reserved</footer>
 
 this is the test stash content
+
+#Dummy code to test
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modern Test Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
+    <style>
+        /* CSS Reset and Global Styles */
+        :root {
+            --primary-color: #5d53ff; /* Vibrant Purple */
+            --secondary-color: #333;
+            --light-bg: #f4f7f6;
+            --white: #ffffff;
+            --shadow: rgba(0, 0, 0, 0.1);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            line-height: 1.6;
+            color: var(--secondary-color);
+            background-color: var(--light-bg);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        /* Container for the page content */
+        .container {
+            max-width: 900px;
+            width: 90%;
+            background: var(--white);
+            border-radius: 12px;
+            box-shadow: 0 10px 30px var(--shadow);
+            overflow: hidden;
+            display: flex; /* Flex container for content sections */
+            flex-direction: column;
+        }
+
+        /* Header/Hero Section */
+        .hero {
+            background: linear-gradient(135deg, var(--primary-color), #8a2be2); /* Gradient background */
+            color: var(--white);
+            padding: 40px 30px;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 2.5rem;
+            font-weight: 800;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 1.1rem;
+            font-weight: 300;
+        }
+
+        /* Feature Cards Section */
+        .features {
+            display: flex;
+            padding: 30px;
+            gap: 20px; /* Space between cards */
+            flex-wrap
